--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "downloadjs": "^1.4.7",
+    "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "random-string": "^0.2.0",
     "react": "^18.0.0",
