--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/node": "^17.0.25",
@@ -22,6 +23,7 @@
     "apollo-server-express": "^3.6.7",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
