--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "graphql": "15",
+    "ntpclient": "^1.1.2",
     "redis": "^4.0.6",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "2.1.0",
