--- a/web/package.json
+++ b/web/package.json
@@ -13,12 +13,15 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "downloadjs": "^1.4.7",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
+    "normalize.css": "^8.0.1",
     "random-string": "^0.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sass": "^1.51.0",
     "socket.io-client": "2.1.0"
   },
   "devDependencies": {
